--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="inner-card-front">
                     <p>What is PHP?</p>
                 </div>
-                <div class="innet-card-back">
+                <div class="inner-card-back">
                     <p>A programmin language</p>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                 <div class="inner-card-front">
                     <p>What is PHP?</p>
                 </div>
-                <div class="innet-card-back">
+                <div class="inner-card-back">
                     <p>A programmin language</p>
                 </div>
             </div>
